--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="relative fade-in-up delay-200 flex justify-center">
 <div class="absolute -inset-4 bg-accent/6 rounded-3xl -z-10"></div>
     <div class="relative rounded-3xl overflow-hidden shadow-2xl border border-accent/30 group transform hover:scale-[1.01] transition-transform duration-500 inline-block">
-    <img alt="Roberto Blanco, Fundador de Baltas Media Lab" class="block max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg h-auto object-cover transform transition duration-700 group-hover:scale-105" src="https://github.com/Rober-prog/Baltas-Media-Lab/edit/main/rober.png"/>
+    <img alt="Roberto Blanco, Fundador de Baltas Media Lab" class="block max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg h-auto object-cover transform transition duration-700 group-hover:scale-105" src="https://www.github.com/Rober-prog/Baltas-Media-Lab/edit/main/rober.png"/>
 <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/80 to-transparent p-6 text-white">
 <p class="font-bold text-lg">Roberto Blanco</p>
 <p class="text-sm opacity-80">Fundador &amp; CEO</p>
