Update agency name and client satisfaction percentage

--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
 <div class="fade-in-up">
 <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-primary/20 text-text-light text-sm font-semibold mb-6 border border-accent/30">
 <span class="w-2 h-2 rounded-full bg-primary animate-pulse"></span>
-                        Agencia de Innovación en Barcelona
+                        Agencia de Creación y Desarrollo
                     </div>
 <h1 class="text-4xl sm:text-5xl md:text-5xl lg:text-6xl font-extrabold tracking-tight text-white leading-tight mb-6">
                         Transformamos negocios con <span class="text-transparent bg-clip-text bg-gradient-to-r from-accent/80 to-accent">Inteligencia Artificial</span>
 </h1>
 <p class="text-base sm:text-lg text-text-dark mb-8 max-w-lg leading-relaxed">
-                        En Baltas Media Lab unimos tecnología, automatización y creatividad para escalar tu empresa. Diseñamos el futuro de tu marca desde el corazón de Barcelona.
+                        En Baltas Media Lab unimos tecnología, automatización y creatividad para escalar tu empresa. Diseñamos el futuro desde tu marca desde tu sueño hasta la realidad.
                     </p>
 <div class="flex flex-col sm:flex-row gap-4">
 <a class="bg-primary hover:bg-secondary text-white px-6 sm:px-8 py-3.5 rounded-lg font-bold text-center transition shadow-md hover:shadow-lg" href="#contacto">
@@ -139,7 +139,7 @@
 <div class="w-8 h-8 rounded-full bg-gray-500 border-2 border-background-dark"></div>
 <div class="w-8 h-8 rounded-full bg-gray-400 border-2 border-background-dark"></div>
 </div>
-<p>Más de <span class="font-bold text-white">50+</span> clientes satisfechos.</p>
+<p>Más de <span class="font-bold text-white">100%</span> clientes satisfechos.</p>
 </div>
 </div>
     <div class="relative fade-in-up delay-200 flex justify-center">
