--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <div class="w-8 h-8 rounded-full bg-gray-500 border-2 border-background-dark"></div>
 <div class="w-8 h-8 rounded-full bg-gray-400 border-2 border-background-dark"></div>
 </div>
-<p>Más de <span class="font-bold text-white">100%</span> clientes satisfechos.</p>
+<p><span class="font-bold text-white">100%</span> clientes satisfechos.</p>
 </div>
 </div>
     <div class="relative fade-in-up delay-200 flex justify-center">
